--- a/assets/styles/components/listing.scss
+++ b/assets/styles/components/listing.scss
@@ -12,8 +12,8 @@
 		justify-content: space-evenly;
 		align-items: center;
 
-		// Cards in Row when screen size is > medium
-		@include screen(medium) {
+		// Cards in Row when screen size is > large
+		@include screen(large) {
 			flex-flow: row wrap;
 			justify-content: space-between;
 		}
